crates/php-parser/tests/snapshots/integration__use_missing_name.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php use;

=== errors ===
expected identifier, found ';'
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Use": {
          "kind": "Normal",
          "uses": [
            {
              "name": {
                "parts": [
                  "<error>"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 9,
                  "end": 9
                }
              },
              "alias": null,
              "span": {
                "start": 9,
                "end": 9
              }
            }
          ]
        }
      },
      "span": {
        "start": 6,
        "end": 11
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 11
  }
}
