crates/php-parser/tests/snapshots/integration__variable_variables.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
$$var = 1;
echo $$name;
$$$deep = 2;
${$expr} = 3;
${$a . $b} = 4;

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "VariableVariable": {
                    "kind": {
                      "Variable": "var"
                    },
                    "span": {
                      "start": 7,
                      "end": 11
                    }
                  }
                },
                "span": {
                  "start": 6,
                  "end": 11
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Int": 1
                },
                "span": {
                  "start": 14,
                  "end": 15
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 15
          }
        }
      },
      "span": {
        "start": 6,
        "end": 17
      }
    },
    {
      "kind": {
        "Echo": [
          {
            "kind": {
              "VariableVariable": {
                "kind": {
                  "Variable": "name"
                },
                "span": {
                  "start": 23,
                  "end": 28
                }
              }
            },
            "span": {
              "start": 22,
              "end": 28
            }
          }
        ]
      },
      "span": {
        "start": 17,
        "end": 30
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "VariableVariable": {
                    "kind": {
                      "VariableVariable": {
                        "kind": {
                          "Variable": "deep"
                        },
                        "span": {
                          "start": 32,
                          "end": 37
                        }
                      }
                    },
                    "span": {
                      "start": 31,
                      "end": 37
                    }
                  }
                },
                "span": {
                  "start": 30,
                  "end": 37
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Int": 2
                },
                "span": {
                  "start": 40,
                  "end": 41
                }
              }
            }
          },
          "span": {
            "start": 30,
            "end": 41
          }
        }
      },
      "span": {
        "start": 30,
        "end": 43
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "VariableVariable": {
                    "kind": {
                      "Variable": "expr"
                    },
                    "span": {
                      "start": 45,
                      "end": 50
                    }
                  }
                },
                "span": {
                  "start": 43,
                  "end": 50
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Int": 3
                },
                "span": {
                  "start": 54,
                  "end": 55
                }
              }
            }
          },
          "span": {
            "start": 43,
            "end": 55
          }
        }
      },
      "span": {
        "start": 43,
        "end": 57
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "VariableVariable": {
                    "kind": {
                      "Binary": {
                        "left": {
                          "kind": {
                            "Variable": "a"
                          },
                          "span": {
                            "start": 59,
                            "end": 61
                          }
                        },
                        "op": "Concat",
                        "right": {
                          "kind": {
                            "Variable": "b"
                          },
                          "span": {
                            "start": 64,
                            "end": 66
                          }
                        }
                      }
                    },
                    "span": {
                      "start": 59,
                      "end": 66
                    }
                  }
                },
                "span": {
                  "start": 57,
                  "end": 66
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Int": 4
                },
                "span": {
                  "start": 70,
                  "end": 71
                }
              }
            }
          },
          "span": {
            "start": 57,
            "end": 71
          }
        }
      },
      "span": {
        "start": 57,
        "end": 73
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 73
  }
}
