crates/php-parser/tests/snapshots/integration__variadic_and_byref.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "variadic",
          "params": [
            {
              "name": "args",
              "type_hint": {
                "kind": {
                  "Named": {
                    "parts": [
                      "int"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 24,
                      "end": 27
                    }
                  }
                },
                "span": {
                  "start": 24,
                  "end": 27
                }
              },
              "default": null,
              "by_ref": false,
              "variadic": true,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 24,
                "end": 36
              }
            }
          ],
          "body": [
            {
              "kind": {
                "Return": {
                  "kind": {
                    "Int": 0
                  },
                  "span": {
                    "start": 56,
                    "end": 57
                  }
                }
              },
              "span": {
                "start": 49,
                "end": 59
              }
            }
          ],
          "return_type": {
            "kind": {
              "Named": {
                "parts": [
                  "int"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 39,
                  "end": 42
                }
              }
            },
            "span": {
              "start": 39,
              "end": 42
            }
          },
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 60
      }
    },
    {
      "kind": {
        "Function": {
          "name": "byref",
          "params": [
            {
              "name": "ref",
              "type_hint": null,
              "default": null,
              "by_ref": true,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 76,
                "end": 81
              }
            }
          ],
          "body": [
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "Assign": {
                      "target": {
                        "kind": {
                          "Variable": "ref"
                        },
                        "span": {
                          "start": 95,
                          "end": 99
                        }
                      },
                      "op": "Assign",
                      "value": {
                        "kind": {
                          "Int": 1
                        },
                        "span": {
                          "start": 102,
                          "end": 103
                        }
                      }
                    }
                  },
                  "span": {
                    "start": 95,
                    "end": 103
                  }
                }
              },
              "span": {
                "start": 95,
                "end": 105
              }
            }
          ],
          "return_type": {
            "kind": {
              "Named": {
                "parts": [
                  "void"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 84,
                  "end": 88
                }
              }
            },
            "span": {
              "start": 84,
              "end": 88
            }
          },
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 61,
        "end": 106
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 106
  }
}
