crates/php-parser/tests/snapshots/integration__version_php80_match_requires_80.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "x"
                },
                "span": {
                  "start": 6,
                  "end": 8
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Match": {
                    "subject": {
                      "kind": {
                        "Variable": "y"
                      },
                      "span": {
                        "start": 17,
                        "end": 19
                      }
                    },
                    "arms": [
                      {
                        "conditions": [
                          {
                            "kind": {
                              "Int": 1
                            },
                            "span": {
                              "start": 23,
                              "end": 24
                            }
                          }
                        ],
                        "body": {
                          "kind": {
                            "String": "a"
                          },
                          "span": {
                            "start": 28,
                            "end": 31
                          }
                        },
                        "span": {
                          "start": 23,
                          "end": 31
                        }
                      },
                      {
                        "conditions": null,
                        "body": {
                          "kind": {
                            "String": "b"
                          },
                          "span": {
                            "start": 44,
                            "end": 47
                          }
                        },
                        "span": {
                          "start": 33,
                          "end": 47
                        }
                      }
                    ]
                  }
                },
                "span": {
                  "start": 11,
                  "end": 49
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 49
          }
        }
      },
      "span": {
        "start": 6,
        "end": 50
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 50
  }
}
