crates/php-parser/tests/snapshots/integration__void_return_type.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php function noop(): void {}
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "noop",
          "params": [],
          "body": [],
          "return_type": {
            "kind": {
              "Named": {
                "parts": [
                  "void"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 23,
                  "end": 27
                }
              }
            },
            "span": {
              "start": 23,
              "end": 27
            }
          },
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 30
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 30
  }
}
